CR-2003-01-14-3  Testsuite: modified remote procedures:
                            - prototype for sendmail mail messages 
                              in mime format
                            - new extra user dummy: ts_def_con2 for
                              start_remote_prog()
                            - bugfix in procedure resolve_upper_arch()

CR-2003-01-14-2  Testsuite: modified file procedures:
                            - get_tmp_file_name(): returned same file
                              name when calling two times in a row.
                            - convert_spool_file_to_html(): new option
                              to return only html content without
                              creating a file.
                            - create_html_table(): new parameters
                              to set border and align in tables
                            new procedures:
                            - read_array_from_file_data()
                            - create_html_target()
                            - create_html_image()

JG-2003-01-14-0  Testsuite: Fixed and improved sharetree test.

CR-2003-01-14-1  Testsuite: New command line parameter for testsuite:
                               no_main2 : don't run main part and don't  
                                          start setup ( used for sourcing 
                                          this file) 

CR-2003-01-14-0  Bugfix:    Fixed broken bild for glinux/alinux from 
                            CR-2003-01-13-0

CR-2003-01-13-1  Testsuite: qrsh test: set executable file permission for
                            generated shell script and wait for nfs to share
                            file.

CR-2003-01-13-0  Enhancem.  new qevent client. This event client is written
                            for the testsuite to get job start and job end
                            events.

CR-2003-01-08-0  Testsuite: Using "ts_def_con" user for deleting spool 