@@ -1,3 +1,7 @@
+CR-2003-01-15-0  Testsuite: new procedure: create_gnuplot_xy_gif()
+                            - generate gnuplot xy charts (only if gnuplot
+                              is installed and in user binary path)
+
 CR-2003-01-14-3  Testsuite: modified remote procedures:
                             - prototype for sendmail mail messages 
                               in mime format
